tests/run-make/non-unicode-env/non_unicode_env.rs
fn main() {
    let _ = env!("NON_UNICODE_VAR");
}
